@@ -1,3 +1,8 @@
+2020-04-27  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/94780
+	* gcc.dg/pr94780.c: New test.
+
 2020-04-27  Patrick Palka  <ppalka@redhat.com>
 
 	PR c++/94772
